[package]
name = "adaa_nl"
version = "0.1.0"
edition = "2021"

[dependencies]
fast-math = "0.1.1"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" } 
polylog = "2.6.0"
envelope = { path = "../envelope" }
rand = "0.7.3"
rand_distr = "0.3.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "adaa_bench"
harness = false
