[package]
name = "oversampler"
version = "0.1.0"
edition = "2021"

[dependencies]
circular_buffer = { path = "../circular_buffer/" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
scilib = "1.0.0"

[dev-dependencies]
criterion = "0.3"

[profile.release]
opt-level = 3
strip = "symbols"
codegen-units = 1
lto = "fat"

[[bench]]
name = "oversampler_bench"
harness = false
